--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
                     </a>
                 </li>
                 <li class="menu__item">
-                    <a href="#">
+                    <a href="#about">
                         Sobre
                     </a>
                 </li>
                 <li class="menu__item">
-                    <a href="#">
+                    <a href="#products">
                         Pizzas
                     </a>
                 </li>
-                <li class="menu__item">
+                <!-- <li class="menu__item">
                     <a href="#">
                         Serviços
                     </a>
@@ -46,7 +46,7 @@
                     <a href="#">
                         Contato
                     </a>
-                </li>
+                </li> -->
             </ul>
 
 
@@ -58,7 +58,7 @@
             </button>
         </nav>
         <h1>
-            Cia.Paulista de Pizza
+            Pizzaria Terraço
         </h1>
     </header>
     <main>
@@ -67,7 +67,6 @@
             <div>
                 <h2>Quem somos</h2>
                 <hr>
-
                 <article id="about__article">
                     <p>
                         Com 30 anos de tradição, a Pizzaria Terraço é um marco na cidade de Belém, conhecida por trazer
@@ -103,13 +102,38 @@
                         Repudiandae fugit soluta aliquam voluptatibus obcaecati.</p>
                     <button type="button">Adicionar ao carrinho</button>
                 </div>
-                <div class="list__itens"></div>
-                <div class="list__itens"></div>
-                <div class="list__itens"></div>
+                <div class="list__itens">
+                    <div class="item_image backgroundImage">
+                        <!-- img -->
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident rem laudantium eos unde
+                        corrupti, aliquam, reprehenderit nisi cumque, vero molestias cupiditate quaerat sit tenetur.
+                        Repudiandae fugit soluta aliquam voluptatibus obcaecati.</p>
+                    <button type="button">Adicionar ao carrinho</button>
+                </div>
+                <div class="list__itens">
+                    <div class="item_image backgroundImage">
+                        <!-- img -->
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident rem laudantium eos unde
+                        corrupti, aliquam, reprehenderit nisi cumque, vero molestias cupiditate quaerat sit tenetur.
+                        Repudiandae fugit soluta aliquam voluptatibus obcaecati.</p>
+                    <button type="button">Adicionar ao carrinho</button>
+                </div>
+                <div class="list__itens">
+                    <div class="item_image backgroundImage">
+                        <!-- img -->
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident rem laudantium eos unde
+                        corrupti, aliquam, reprehenderit nisi cumque, vero molestias cupiditate quaerat sit tenetur.
+                        Repudiandae fugit soluta aliquam voluptatibus obcaecati.</p>
+                    <button type="button">Adicionar ao carrinho</button>
+                </div>
             </div>
         </section>
     </main>
     <footer>
+        <!-- TODO: Outros serviços, form email, mapa endereço -->
         <section id="services">
 
         </section>
