--- a/index.html
+++ b/index.html
@@ -15,57 +15,57 @@
 <body>
     <header>
         <div class="fade inactive"></div>
-        <nav>
-            <ul id="menu" class="inactive">
-                <button type="button" id="menu__close" class="flatButton">
-                    <!-- TODO: Inserir Icon X redondo e cheio -->
-                    X
+        <div>
+            <nav>
+                <ul id="menu" class="inactive">
+                    <button type="button" id="menu__close" class="flatButton">
+                        <!-- TODO: Inserir Icon X redondo e cheio -->
+                        X
+                    </button>
+
+                    <li class="menu__item">
+                        <a href="#">
+                            Inicio
+                        </a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#about">
+                            Sobre
+                        </a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#products">
+                            Pizzas
+                        </a>
+                    </li>
+                    <!-- <li class="menu__item">
+                        <a href="#">
+                            Serviços
+                        </a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#">
+                            Contato
+                        </a>
+                    </li> -->
+                </ul>
+                <button type="button" id="menu__open" class="flatButton">
+                    <!-- TODO: Inserir Icon -->
+                    <div></div>
+                    <div></div>
+                    <div></div>
                 </button>
-
-                <li class="menu__item">
-                    <a href="#">
-                        Inicio
-                    </a>
-                </li>
-                <li class="menu__item">
-                    <a href="#about">
-                        Sobre
-                    </a>
-                </li>
-                <li class="menu__item">
-                    <a href="#products">
-                        Pizzas
-                    </a>
-                </li>
-                <!-- <li class="menu__item">
-                    <a href="#">
-                        Serviços
-                    </a>
-                </li>
-                <li class="menu__item">
-                    <a href="#">
-                        Contato
-                    </a>
-                </li> -->
-            </ul>
-
-
-            <button type="button" id="menu__open" class="flatButton">
-                <!-- TODO: Inserir Icon -->
-                <div></div>
-                <div></div>
-                <div></div>
-            </button>
-        </nav>
-        <h1>
-            Pizzaria Terraço
-        </h1>
+            </nav>
+            <h1>
+                Pizzaria Terraço
+            </h1>
+        </div>
     </header>
     <main>
         <section id="about">
             <div id="about__image" class="backgroundImage"></div>
             <div>
-                <h2>Quem somos</h2>
+                <h2><i>Quem somos</i></h2>
                 <hr>
                 <article id="about__article">
                     <p>
@@ -90,7 +90,7 @@
             </div>
         </section>
         <section id="products">
-            <h2>Pizzas</h2>
+            <h2><i>Pizzas</i></h2>
             <hr>
             <div id="products__list">
                 <div class="list__itens">
